--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+         <h2>Sexy</h2>
     </head>
     <body>
-        <p1>Sex</p1>
+        <h1>Sex</h1>
     </body>
 </html>
