--- a/index.html
+++ b/index.html
@@ -2,18 +2,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
+  <style>
+  .centerBox {
+    margin: auto;
+    width: 60%;
+    border: 8px solid black;
+    background-color: white;
+    padding: 10px;
+  }
+  body {
+    background-image: url('assets/back.jpg');
+    padding: 100;
+    margin: 10;
+    text-align: center;
+  }
+  h1 {text-align: center;}
+  p {text-align: center;}
+  div {text-align: center;}
+  </style>
+  <h1 style="color:white"> Title </h1>
+  
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
+  <script language="javascript" type="text/javascript" src="Color.js"></script>
   <script language="javascript" type="text/javascript" src="FireWorks.js"></script>
   <script language="javascript" type="text/javascript" src="Sketch.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
-  <!-- This line removes any default padding and style.
-       You might only need one of these values set. -->
-  <style> body { padding: 0; margin: 0; } </style>
+  <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
 </head>
 
 <body>
+
 </body>
 </html>
