--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   .centerBox {
     margin: auto;
     width: 60%;
-    border: 8px solid black;
+    border: 8px solid gray;
     background-color: white;
+    text-color: white;
     padding: 10px;
   }
   body {
@@ -21,7 +22,7 @@
   p {text-align: center;}
   div {text-align: center;}
   </style>
-  <h1 style="color:white"> Title </h1>
+  <h1 style="color:white"> You're almost there! </h1>
   
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
