--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     margin: auto;
     width: 60%;
     border: 8px solid gray;
-    background-color: white;
+    color: white;
     text-color: white;
     padding: 10px;
   }
